enable preview features